--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -102,3 +102,9 @@ nav .logo {
   transform: translateY(-8px);
   cursor: pointer;
 }
+
+// Footer
+.footer {
+  margin-top: 4rem;
+  padding: 1rem;
+}
