--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -83,6 +83,11 @@ nav .logo {
   cursor: pointer;
 }
 
+.footer {
+  margin-top: 4rem;
+  padding: 1rem;
+}
+
 .textContent {
   text-align: center;
   font-size: 1.3rem;
